fix: align trainer class sprite sync semantics